5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1635_2446.log
== SUBMITION (2019-04-09 23:08:47) 
-- CODE:
senha = int(input("Senha: "))

numerador = 0
denominador = 0

if(len(senha) % 2 == 0):
	contador = 0 # Se contador for par, entao eh a vez de somar o digito ao numerador
else:
	contador = 1 # Se contador for impar, entao eh a vez de somar o digito ao denominador

while(senha > 0):
	if(contador % 2 == 0):
		numerador += senha % 10
	else:
		denominador += senha % 10
		
	senha = senha // 10
	contador++
	
if(numerador % denominador == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.156891
-- ERROR:
  File "/home/codebench/codes/1635/2446/main.py", line 18
    contador++
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:11:13) 
-- CODE:
senha = int(input("Senha: "))

numerador = 0
denominador = 0

if(len(str(senha)) % 2 == 0):
	contador = 0 # Se contador for par, entao eh a vez de somar o digito ao numerador
else:
	contador = 1 # Se contador for impar, entao eh a vez de somar o digito ao denominador

while(senha > 0):
	if(contador % 2 == 0):
		numerador += senha % 10
	else:
		denominador += senha % 10
		
	senha = senha // 10
	contador++
	
if(numerador % denominador == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.175194
-- ERROR:
  File "/home/codebench/codes/1635/2446/main.py", line 18
    contador++
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:12:24) 
-- CODE:
senha = int(input("Senha: "))

numerador = 0
denominador = 0

if(len(str(senha)) % 2 == 0):
	contador = 0 # Se contador for par, entao eh a vez de somar o digito ao numerador
else:
	contador = 1 # Se contador for impar, entao eh a vez de somar o digito ao denominador

while(senha > 0):
	if(contador % 2 == 0):
		numerador = numerador + senha % 10
	else:
		denominador = denominador + senha % 10
		
	senha = senha // 10
	contador = contador + 1
	
if(numerador % denominador == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.13735
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:13:36) 
-- CODE:
senha = int(input("Senha: "))

numerador = 0
denominador = 0

if(len(str(senha)) % 2 == 0):
	contador = 0 # Se contador for par, entao eh a vez de somar o digito ao numerador
else:
	contador = 1 # Se contador for impar, entao eh a vez de somar o digito ao denominador

while(senha > 0):
	if(contador % 2 == 0):
		numerador = numerador + senha % 10
	else:
		denominador = denominador + senha % 10
		
	senha = senha // 10
	contador = contador + 1
	
if(numerador % denominador == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.124967
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:14:07) 
-- CODE:
senha = int(input("Senha: "))

numerador = 0
denominador = 0

if(len(str(senha)) % 2 == 0):
	contador = 0 # Se contador for par, entao eh a vez de somar o digito ao numerador
else:
	contador = 1 # Se contador for impar, entao eh a vez de somar o digito ao denominador

while(senha > 0):
	if(contador % 2 == 0):
		numerador = numerador + (senha % 10)
	else:
		denominador = denominador + (senha % 10)
		
	senha = senha // 10
	contador = contador + 1
	
if(numerador % denominador == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.135715
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:14:12) 
-- CODE:
senha = int(input("Senha: "))

numerador = 0
denominador = 0

if(len(str(senha)) % 2 == 0):
	contador = 0 # Se contador for par, entao eh a vez de somar o digito ao numerador
else:
	contador = 1 # Se contador for impar, entao eh a vez de somar o digito ao denominador

while(senha > 0):
	if(contador % 2 == 0):
		numerador = numerador + (senha % 10)
	else:
		denominador = denominador + (senha % 10)
		
	senha = senha // 10
	contador = contador + 1
	
if(numerador % denominador == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:14:48) 
-- CODE:
senha = int(input("Senha: "))

numerador = 0
denominador = 0

if(len(str(senha)) % 2 == 0):
	contador = 0 # Se contador for par, entao eh a vez de somar o digito ao numerador
else:
	contador = 1 # Se contador for impar, entao eh a vez de somar o digito ao denominador

while(senha > 0):
	if(contador % 2 == 0):
		numerador = numerador + (senha % 10)
	else:
		denominador = denominador + (senha % 10)
		
	senha = senha // 10
	contador = contador + 1
	
if(numerador % denominador == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:16:02) 
-- CODE:
senha = int(input("Senha: "))

numerador = 0
denominador = 0

if(len("" + senha) % 2 == 0):
	contador = 0 # Se contador for par, entao eh a vez de somar o digito ao numerador
else:
	contador = 1 # Se contador for impar, entao eh a vez de somar o digito ao denominador

while(senha > 0):
	if(contador % 2 == 0):
		numerador = numerador + (senha % 10)
	else:
		denominador = denominador + (senha % 10)
		
	senha = senha // 10
	contador = contador + 1
	
if(numerador % denominador == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.209263
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2446/main.py", line 6, in <module>
    if(len("" + senha) % 2 == 0):
TypeError: Can't convert 'int' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:16:03) 
-- CODE:
senha = int(input("Senha: "))

numerador = 0
denominador = 0

if(len("" + senha) % 2 == 0):
	contador = 0 # Se contador for par, entao eh a vez de somar o digito ao numerador
else:
	contador = 1 # Se contador for impar, entao eh a vez de somar o digito ao denominador

while(senha > 0):
	if(contador % 2 == 0):
		numerador = numerador + (senha % 10)
	else:
		denominador = denominador + (senha % 10)
		
	senha = senha // 10
	contador = contador + 1
	
if(numerador % denominador == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(len("" + senha) % 2 == 0):
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:16:25) 
-- CODE:
senha = int(input("Senha: "))

numerador = 0
denominador = 0

if(len(str(senha)) % 2 == 0):
	contador = 0 # Se contador for par, entao eh a vez de somar o digito ao numerador
else:
	contador = 1 # Se contador for impar, entao eh a vez de somar o digito ao denominador

while(senha > 0):
	if(contador % 2 == 0):
		numerador = numerador + (senha % 10)
	else:
		denominador = denominador + (senha % 10)
		
	senha = senha // 10
	contador = contador + 1
	
if(numerador % denominador == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:19:18) 
-- CODE:
senha = int(input("Senha: "))

numerador = 0
denominador = 0

if(len(str(senha)) % 2 == 0):
	contador = 0 # Se contador for par, entao eh a vez de somar o digito ao numerador
else:
	contador = 1 # Se contador for impar, entao eh a vez de somar o digito ao denominador

while(senha > 0):
	if(contador % 2 == 0):
		numerador = numerador + (senha % 10)
	else:
		denominador = denominador + (senha % 10)
		
	senha = senha // 10
	contador = contador + 1
	
if((numerador % denominador == 0) or (denominador % numerador == 0)):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:19:25) 
-- CODE:
senha = int(input("Senha: "))

numerador = 0
denominador = 0

if(len(str(senha)) % 2 == 0):
	contador = 0 # Se contador for par, entao eh a vez de somar o digito ao numerador
else:
	contador = 1 # Se contador for impar, entao eh a vez de somar o digito ao denominador

while(senha > 0):
	if(contador % 2 == 0):
		numerador = numerador + (senha % 10)
	else:
		denominador = denominador + (senha % 10)
		
	senha = senha // 10
	contador = contador + 1
	
if((numerador % denominador == 0) or (denominador % numerador == 0)):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.141538
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:20:27) 
-- CODE:
senha = int(input("Senha: "))

numerador = 0
denominador = 0

if(len(str(senha)) % 2 == 0):
	contador = 0 # Se contador for par, entao eh a vez de somar o digito ao numerador
else:
	contador = 1 # Se contador for impar, entao eh a vez de somar o digito ao denominador

while(senha > 0):
	if(contador % 2 == 0):
		numerador = numerador + (senha % 10)
	else:
		denominador = denominador + (senha % 10)
		
	senha = senha // 10
	contador = contador + 1
	
if((numerador % denominador == 0) or (denominador % numerador == 0)):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:20:34) 
-- CODE:
senha = int(input("Senha: "))

numerador = 0
denominador = 0

if(len(str(senha)) % 2 == 0):
	contador = 0 # Se contador for par, entao eh a vez de somar o digito ao numerador
else:
	contador = 1 # Se contador for impar, entao eh a vez de somar o digito ao denominador

while(senha > 0):
	if(contador % 2 == 0):
		numerador = numerador + (senha % 10)
	else:
		denominador = denominador + (senha % 10)
		
	senha = senha // 10
	contador = contador + 1
	
if((numerador % denominador == 0) or (denominador % numerador == 0)):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:20:48) 
-- CODE:
senha = int(input("Senha: "))

numerador = 0
denominador = 0

if(len(str(senha)) % 2 == 0):
	contador = 0 # Se contador for par, entao eh a vez de somar o digito ao numerador
else:
	contador = 1 # Se contador for impar, entao eh a vez de somar o digito ao denominador

while(senha > 0):
	if(contador % 2 == 0):
		numerador = numerador + (senha % 10)
	else:
		denominador = denominador + (senha % 10)
		
	senha = senha // 10
	contador = contador + 1
	
if((numerador % denominador == 0) or (denominador % numerador == 0)):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:21:07) 
-- CODE:
senha = int(input("Senha: "))

numerador = 0
denominador = 0

if(len(str(senha)) % 2 == 0):
	contador = 0 # Se contador for par, entao eh a vez de somar o digito ao numerador
else:
	contador = 1 # Se contador for impar, entao eh a vez de somar o digito ao denominador

while(senha > 0):
	if(contador % 2 == 0):
		numerador = numerador + (senha % 10)
	else:
		denominador = denominador + (senha % 10)
		
	senha = senha // 10
	contador = contador + 1
	
if((numerador % denominador == 0) or (denominador % numerador == 0)):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.139463
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
